--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
 <head>
-<meta http-equiv="refresh" content="0; url=http://www.vinyaaz.com/collectionview?clnID=187&cbak=imp#features/" />
+<!--<meta http-equiv="refresh" content="0; url=http://www.vinyaaz.com/collectionview?clnID=187&cbak=imp#features/" />-->
 </head>
 <body>
+  
+<iframe src="http://www.vinyaaz.com/collectionview?clnID=187&cbak=imp#features/" style="border:none"></iframe>
 </body>
 </html>
