--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <html>
-<head>
-<!--<meta http-equiv="refresh" content="0; url=http://www.vinyaaz.com/collectionview?clnID=187&cbak=imp#features/" />-->
+<head><!--<meta http-equiv="refresh" content="0; url=http://www.vinyaaz.com/collectionview?clnID=187&cbak=imp#features/" />-->
 </head>
 <body>
-  
-<iframe src="http://www.vinyaaz.com/collectionview?clnID=187&cbak=imp#features/" style="border:none"></iframe>
+<iframe src="http://www.vinyaaz.com/collectionview?clnID=187&cbak=imp#features/" style="border: 0; position:fixed; top:0; left:0; right:0; bottom:0; width:100%; height:100%"></iframe>
 </body>
 </html>
