--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta name="description" content="djobs: powered by Dexter Talent Labs.">
       <meta name="keywords" content="djobs, Bangalore jobs, jobs, india jobs, career partner, dexter talent labs, dexter, talent, labs, hack, hire, dexterhack,dextertalentlabs.com, dexterhack.com">
 	  <meta name="author" content="Abhishek Kumar Gupta facebook:http://wwww.facebook.com/abhi.ise">
-    <title>#WomenWhoCanCode: Powered By DexterHack</title>    
+    <title>djobs: your career partner</title>    
 </head>
 <body>
 <iframe src="http://www.vinyaaz.com/collectionview?clnID=187&cbak=imp#features/" style="border: 0; position:fixed; top:0; left:0; right:0; bottom:0; width:100%; height:100%"></iframe>
